@@ -279,7 +279,7 @@ public abstract class AJAXServlet extends HttpServlet implements UploadRegistry 
     public static final String ACTION_REFRESH_SECRET = "refreshSecret";
 
     public static final String ACTION_TERMSEARCH = "advancedSearch";
-    
+
     public static final String ACTION_GETCHANGEEXCEPTIONS = "getChangeExceptions";
 
     /**
@@ -798,7 +798,7 @@ public abstract class AJAXServlet extends HttpServlet implements UploadRegistry 
         return encodeUrl(s, forAnchor, false);
     }
 
-    private static final Pattern PATTERN_CRLF = Pattern.compile("\r?\n|(?:%0[aA])?%0[dD]");
+    private static final Pattern PATTERN_CRLF = Pattern.compile("\r?\n|\r|(?:%0[aA])?%0[dD]|%0[aA]");
     private static final Pattern PATTERN_DSLASH = Pattern.compile("(?:/|%2[fF]){2}");
 
     /**
